5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1828_3177.log
== TEST (2019-06-12 14:10:39) 
-- CODE:
string = input = (" ")

i = 0 

for i in range:
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:12:50) 
-- CODE:
string = input = (" ")
a = 0 
e = 0
i = 0
o = 0
u = 0
for x in range:
-- ERROR:
File "XXXX", line 8
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:12:57) 
-- CODE:
string = input = (" ")
a = 0 
e = 0
i = 0
o = 0
u = 0
-- ERROR:
File "XXXX", line 8
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:28) 
-- CODE:
string = input = (" ")
a = 0 
e = 0
i = 0
o = 0
u = 0

for x in range:
	string = a + 1
	string = e + 1
	string = i + 1
	string = o + 1
	string = u + 1 
if (string[x]==a):
	print(string[x])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    for x in range:
TypeError: 'type' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:04) 
-- CODE:
string = input = (" ")
a = 0 
e = 0
i = 0
o = 0
u = 0
a = 0
for a in range:
	string = a + 1
	string = e + 1
	string = i + 1
	string = o + 1
	string = u + 1 
if (string[x]==a):
	print(string[x])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    for a in range:
TypeError: 'type' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:27) 
-- CODE:
string = input = (" ")
a = 0 
e = 0
i = 0
o = 0
u = 0
for string in range:
	string = a + 1
	string = e + 1
	string = i + 1
	string = o + 1
	string = u + 1 
if (string[x]==a):
	print(string[x])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for string in range:
TypeError: 'type' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:36) 
-- CODE:
string = input = (" ")
a = 0 
e = 0
i = 0
o = 0
u = 0
for i in range:
	string = a + 1
	string = e + 1
	string = i + 1
	string = o + 1
	string = u + 1 
if (string[x]==a):
	print(string[x])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for i in range:
TypeError: 'type' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:01) 
-- CODE:
string = input = (" ")
a = 0 
e = 0
i = 0
o = 0

for x in range:
	x = a + 1
	x = e + 1
	x = i + 1
	x = o + 1
if string[x]==a:
	print(len(string))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for x in range:
TypeError: 'type' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:23) 
-- CODE:
string = array(input = (" "))
a = 0 
e = 0
i = 0
o = 0

for x in range:
	x = a + 1
	x = e + 1
	x = i + 1
	x = o + 1
if string[x]==a:
	print(len(string))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    string = array(input = (" "))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:31) 
-- CODE:
string = array(eval(input = (" "))
a = 0 
e = 0
i = 0
o = 0

for x in range:
	x = a + 1
	x = e + 1
	x = i + 1
	x = o + 1
if string[x]==a:
	print(len(string))
	
-- ERROR:
File "XXXX", line 2
    a = 0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:43) 
-- CODE:
string = array(eval(input = (" "))
a = 0 
e = 0
i = 0
o = 0

for x in range:
	x = a + 1
	x = e + 1
	x = i + 1
	x = o + 1
if string[x]==a:
	print(len(string))
	
-- ERROR:
File "XXXX", line 2
    a = 0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
